package operational.registry;

public interface Notifier {
    void notifyResult(String message);
}
