classDiagram
class MainFinal {
  +main(args: String[])
}

class Notifier {
  <<interface>>
  +notifyResult(message: String)*
}
class ConsoleNotifier {
  +notifyResult(message: String)
}
class FileNotifier {
  -filePath: String
  +FileNotifier(filePath: String)
  +notifyResult(message: String)
}
class PopupNotifier {
  +notifyResult(message: String)
}

class BinaryOperation {
  -notifier: Notifier
  +BinaryOperation(notifier: Notifier)
  +execute(a: double, b: double) void
  +compute(a: double, b: double) double*
  +getSymbol() String*
  +validate(a: double, b: double) boolean*
  +onValidationError(a: double, b: double) void*
}

class SumOperation
class DivideOperation

Notifier <|.. ConsoleNotifier
Notifier <|.. FileNotifier
Notifier <|.. PopupNotifier

BinaryOperation <|-- SumOperation
BinaryOperation <|-- DivideOperation
BinaryOperation --> Notifier

MainFinal --> "*" BinaryOperation : mappa
MainFinal --> "*" Notifier : mappa
